--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@tailwindcss/cli": "^4.1.7",
     "framer-motion": "^12.12.1",
     "gsap": "^3.13.0",
+    "lottie-react": "^2.4.1",
     "react": "^18.2.0",
     "react-confetti": "^6.4.0",
     "react-dom": "^18.2.0",
