--- a/firebase.json
+++ b/firebase.json
@@ -1,13 +1,16 @@
 {
   "hosting": {
-    "public": "build",    
+    "public": "y",
     "ignore": [
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
     ],
     "rewrites": [
-      { "source": "**", "destination": "/index.html" }
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
     ]
   }
 }
