--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.21",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "postcss": "^8.5.3",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "tailwindcss": "^4.1.7"
   },
   "scripts": {
@@ -38,4 +39,5 @@
       "last 1 safari version"
     ]
   }
+  
 }
